--- a/seasons.html
+++ b/seasons.html
@@ -3,13 +3,13 @@
         <title>서울의 사계절 - 계절별 특징</title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="icon" type="image/png" href="images/favicon.png" />
-
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;700&display=swap"
             rel="stylesheet"
         />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
         <header>
